<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--toolbar-->
    <include layout="@layout/about_toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/introduce_and_help"
                android:textColor="@color/bout_text_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card_nopic"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/introduce"
                    android:textIsSelectable="true"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/lin_bgck"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/developers"
                android:textColor="@color/bout_text_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card_nopic">

                <ImageView
                    android:id="@+id/ig_avatar_drakeet"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="16dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/xj"/>

                <TextView
                    android:id="@+id/drakeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ig_avatar_drakeet"
                    android:layout_toEndOf="@id/ig_avatar_drakeet"
                    android:layout_toRightOf="@id/ig_avatar_drakeet"
                    android:text="夏觉"
                    tools:ignore="HardcodedText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/drakeet"
                    android:layout_toEndOf="@id/ig_avatar_drakeet"
                    android:layout_toRightOf="@id/ig_avatar_drakeet"
                    android:text="@string/w_code_ui"
                    android:textSize="13sp"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/lin_bgck"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/use_open_source"
                android:textColor="@color/bout_text_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_card_nopic"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_source_list"
                    android:textSize="13sp"/>
            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>